docs: rewrite README as project overview, complete CHANGELOG
Replace the placeholder-domain build howto with a full project README:
variant/tag table, customization summary, app-image usage pattern
(base ships empty webapps by design), repository layout, CI build &
release, and the Renovate anchor/automerge maintenance model. Record
recent changes in CHANGELOG: CI provenance fix, tomcat11-jre25
removal, Renovate config migration, and the base-image automerge
packageRule.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>